--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
   --text: 0, 0, 0;
 }
 
+/* Gradient Background color  */
 .bg-radial-from-center {
   --tw-gradient-stops: var(--tw-gradient-from, #1e40af),
     var(--tw-gradient-to, #ff0101);
@@ -18,6 +19,7 @@
   animation: gradient-shift 10s ease infinite;
 }
 
+/* Keep changing the background position */
 @keyframes gradient-shift {
   0% {
     background-position: 0% 0%;
@@ -39,6 +41,16 @@
   }
 }
 
+/* Card Breathing Animation */
+.animate-breathing {
+  animation: breathing 6s ease-in-out infinite;
+  position: relative !important;
+  z-index: 0 !important;
+}
+
+/* I need some margin for flex-wrap so it's scale down instead of up */
+/* I do want to scale up but haven't find a good way to handle it yet */
+
 @keyframes breathing {
   0% {
     transform: scale(0.8);
@@ -52,8 +64,4 @@
     transform: scale(0.8);
     opacity: 0.8;
   }
-}
-
-.animate-breathing {
-  animation: breathing 6s ease-in-out infinite;
 }
